Forgot Password and changepassword pages done. and Authentication system has been enhanced no changes will be needed in future. and error notifications changed to sweet alerts for better user experience.

--- a/StudentSupport/templates/recover_password_template.html
+++ b/StudentSupport/templates/recover_password_template.html
@@ -3,14 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Confirmation Email</title>
+    <title>Recover Password</title>
     <style>
-      /* -------------------------------------
-          GLOBAL RESETS
-      ------------------------------------- */
-
-      /*All the styling goes here*/
-
       img {
         border: none;
         -ms-interpolation-mode: bicubic;
@@ -333,7 +327,7 @@
     </style>
   </head>
   <body class="">
-    <span class="preheader">Hey {{ first_name }}, Confirm Your Account.</span>
+    <span class="preheader">Hey {{ first_name }}, Change Password.</span>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="body">
       <tr>
         <td>&nbsp;</td>
@@ -349,10 +343,9 @@
                   <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
-                        <p>Hi, {{ first_name }},</p>
+                        <p>Hi {{ first_name }},</p>
                           <p>Welcome to Student Support System,<br /> Government Engineering College, Bhavnagar</p>
-                        <p>To complete your registration, please verify your email account by pressing button below.<br />
-                            <b>Note : </b>You need to be in internal network of GEC, Bhavnagar to confirm account otherwise this won't work.</p>
+                        <p>To change password of your account, you need to be in the network of GEC, Bhavnagae. <br />Otherwise It won't work.</p>
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
                             <tr>
@@ -360,7 +353,7 @@
                                 <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="{{ url }}" target="_blank">Verify Your Email</a> </td>
+                                      <td> <a href="{{ url }}" target="_blank">Change Password.</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
@@ -368,8 +361,8 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p>or verify using the link : <a>{{ url }}</a></p>
-                        <p>If you did not create an account on internal portal of Government Engineering College, Bhavnagar. Ignore this mail.</p>
+                        <p>or paste this link in browser : <a>{{ url }}</a></p>
+                        <p>If you haven't requested to change password, Ignore this mail.</p>
                       </td>
                     </tr>
                   </table>
